--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple Catcher</title>
+    <title>Coin Catcher</title>
   </head>
   <body>
     <header>
-      <h1>Phaser Demo | Apple Catcher</h1>
+      <h1>WiaC - Coin Catcher</h1>
     </header>
     <main>
       <canvas id="gameCanvas"></canvas>
       <div id="gameStartDiv" class="gameUI">
         <h1>Apple Catcher</h1>
-        <p>You have 30 seconds to catch apples!</p>
-        <p>If you catch more than 10 apples you win</p>
-        <p>If you catch less than 10 apples you loose</p>
+        <p>You have 30 seconds to catch coins!</p>
         <p>Click the start button to begin</p>
         <button id="gameStartBtn"><p>Start</p></button>
       </div>
