Added loose condition removed timer, also increased the number of penalty and coins in general

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <main>
       <canvas id="gameCanvas"></canvas>
       <div id="gameStartDiv" class="gameUI">
-        <h1>Apple Catcher</h1>
-        <p>You have 30 seconds to catch coins!</p>
-        <p>Click the start button to begin</p>
+        <h1>Coin Catcher</h1>
+        <p>Catch coins to earn points</p>
+        <p>avoid RED COINS, they cost lives</p>
+        <p>Click the start button to begin!</p>
         <button id="gameStartBtn"><p>Start</p></button>
       </div>
       <div id="gameEndDiv" class="gameUI">
