--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crypto Flight</title>
+    <title>Coin Catcher</title>
   </head>
   <body>
     <header>
-      <h1>WiaC - Crypto Flight</h1>
+      <h1>WiaC - Coin Catcher</h1>
     </header>
     <main>
       <canvas id="gameCanvas"></canvas>
       <div id="gameStartDiv" class="gameUI">
-        <h1>Crypto Flight</h1>
-        <p>Tap to flap and navigate through obstacles!</p>
-        <p>Avoid hitting pipes or the ground</p>
-        <p>Pass through gaps to score points</p>
+        <h1>Coin Catcher</h1>
+        <p>Catch coins to earn points</p>
+        <p>avoid RED COINS, they cost lives</p>
         <p>Click the start button to begin!</p>
         <button id="gameStartBtn"><p>Start</p></button>
       </div>
@@ -24,11 +23,11 @@
         <p>Game Over</p>
         <h1>You <span id="gameWinLoseSpan"></span></h1>
         <h1>Final Score: <span id="gameEndScoreSpan"></span></h1>
-        <button id="retryBtn"><p>Retry</p></button>
+        <p>Refresh the page to play again</p>
       </div>
     </main>
     <footer>
-      <p>Crypto Flight By Lucas</p>
+      <p>Apple Catcher By Lucas</p>
     </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
